[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-toxicity-pipeline"
version = "0.1.0"
description = "Starter project for clinical toxicity modeling pipelines."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
]

[project.scripts]
clinical-toxicity = "clinical_toxicity_pipeline.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
